Closed
Bug 906603
Opened 12 years ago
Closed 10 years ago
B2G RIL: Support Change Call Barring Password on Emulator.
Categories
(Firefox OS Graveyard :: Emulator, defect)
Tracking
(tracking-b2g:backlog, firefox41 fixed)
People
(Reporter: sku, Assigned: bhsu)
References
Details
Attachments
(4 files, 3 obsolete files)
Support Change Call Barring Password on Emulator.
Currently, we always got error - RequestNotSupported when testing Change Call Barring Password on emulator. We migth need to make this test available on emulator.
Updated•12 years ago
|
Blocks: b2g-emulator
| Reporter | ||
Updated•12 years ago
|
No longer blocks: b2g-emulator
See Also: → 905479
Updated•12 years ago
|
Blocks: b2g-emulator
Updated•12 years ago
|
Component: DOM: Device Interfaces → RIL
Product: Core → Boot2Gecko
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → bhsu
Updated•11 years ago
|
Component: RIL → Emulator
Updated•10 years ago
|
blocking-b2g: --- → backlog
Updated•10 years ago
|
blocking-b2g: backlog → ---
tracking-b2g:
--- → backlog
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8582279 -
Flags: review?(szchen)
Comment 2•10 years ago
|
||
Comment on attachment 8582279 [details] [diff] [review]
Update the related testcase
Review of attachment 8582279 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/mobileconnection/tests/marionette/test_call_barring_change_password.js
@@ +64,5 @@
> + pin: "0000",
> + newPin: "abcd"
> + }))
> +
> + // Test passing an incorrect password
Add a comment here to describe the default password in emulator.
Attachment #8582279 -
Flags: review?(szchen) → review+
| Assignee | ||
Comment 3•10 years ago
|
||
Attachment #8582279 -
Attachment is obsolete: true
Attachment #8584268 -
Flags: review+
| Assignee | ||
Comment 4•10 years ago
|
||
| Assignee | ||
Comment 5•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Attachment #8591461 -
Flags: review?(echen)
| Assignee | ||
Updated•10 years ago
|
Attachment #8592162 -
Flags: review?(echen)
Comment 6•10 years ago
|
||
Comment on attachment 8592162 [details] [review]
[hardware/ril] pull request 49 (For branch: b2g-ril_v7)
Looks good, please also remember to provide a PR for master branch (for emulator KK). Thank you.
Attachment #8592162 -
Flags: review?(echen) → review+
Comment 7•10 years ago
|
||
Comment on attachment 8591461 [details] [review]
[external/qemu] pull request 137
Looks good, thank you.
Attachment #8591461 -
Flags: review?(echen) → review+
| Assignee | ||
Comment 8•10 years ago
|
||
Attachment #8597837 -
Flags: review+
| Assignee | ||
Comment 9•10 years ago
|
||
Comment on attachment 8591461 [details] [review]
[external/qemu] pull request 137
Hi Edgar,
Since Bug 1152272 enhance the way emulator generate AT responses, there is one commit in this pull request is updated correspondingly. Can you take a look at it?
Attachment #8591461 -
Flags: feedback?(echen)
Comment 10•10 years ago
|
||
Comment on attachment 8591461 [details] [review]
[external/qemu] pull request 137
Perfect!! Thank you.
Attachment #8591461 -
Flags: feedback?(echen) → feedback+
| Assignee | ||
Comment 11•10 years ago
|
||
Hi Aknow,
There is another testcase in Telephony test suit need to be updated, do you minf reviewing this patch again?
Attachment #8584268 -
Attachment is obsolete: true
Attachment #8601443 -
Flags: review?(szchen)
Comment 12•10 years ago
|
||
Comment on attachment 8601443 [details] [diff] [review]
Update the related testcase (V2)
Review of attachment 8601443 [details] [diff] [review]:
-----------------------------------------------------------------
Good. Thank you.
::: dom/system/gonk/ril_consts.js
@@ +13,5 @@
> * limitations under the License.
> */
>
> // Set to true to debug all RIL layers
> +this.DEBUG_ALL = true;
should be false
::: dom/telephony/test/marionette/test_mmi_change_barring_password.js
@@ +40,5 @@
> expectedError: {
> name: "emMmiErrorInvalidPassword"
> }
> },
> + // Expect to success.
succeed
Attachment #8601443 -
Flags: review?(szchen) → review+
| Assignee | ||
Comment 13•10 years ago
|
||
Attachment #8601443 -
Attachment is obsolete: true
Attachment #8601922 -
Flags: review+
| Assignee | ||
Comment 14•10 years ago
|
||
Keywords: checkin-needed
Comment 16•10 years ago
|
||
platform_external_qemu:
- master: https://github.com/mozilla-b2g/platform_external_qemu/commit/218a5637399d023f4326e12c8a486dad95403b6c
Comment 17•10 years ago
|
||
Comment 19•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•