Bug 906603 - Support changing call barring password. r=echen